...
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                <TextView
                        android:id="@+id/txtFact"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@{fact.value}"
                        android:textSize="@dimen/result_font_80"
                        app:setFontSize="@{fact.value}"
                        tools:text="@string/app_name"/>

                <br.com.hussan.cleanarch.views.TagLayout
                        android:id="@+id/lytFactCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
...
