<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="category"
            type="String" />
    </data>

    <com.google.android.material.chip.Chip
        android:id="@+id/lytFact"
        style="@style/fact_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{category}"
        tools:text="@string/app_name" />

</layout>
