...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.FactsActivity">


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFacts"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
